release(0.11.0): integrate v0.11.0 milestone into main (#311)
* chore(release): open development/0.11.0 — bump reactor to 0.11.0-SNAPSHOT

v0.10.0 release state finalized on main (6c48c87: #232 integration +
#233 benchmarks/stream-loopback CI de-flake). Cut the next development
line off that commit and bump all 11 reactor coordinates (root + parent
+ 9 modules) from 0.10.0 to 0.11.0-SNAPSHOT.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* feat(transport): PAQS execution-seam (StreamExecutionBackend) + ADR-051 (v0.11 S21 / T1-8) (#235)

* feat(transport): port PAQS StreamExecutionBackend seam onto default line (v0.11 S21, T1-8)

Refactor-neutral extraction of the stream-execution injection point (M1) from the
parked research/loom-continuation-locality branch onto development/0.11.0:

- StreamExecutionBackend: Core-internal @FunctionalInterface seam (not SPI; The Wall)
- PaqsScheduler: additive 6-arg ctor; 5-arg delegates to default VT-per-stream backend
  (behaviourally identical to the prior inline Thread.ofVirtual().name().start())
- AbstractPaqsSchedulerTck: ExecutionBackendSeamContract (custom backend preserves
  ScopedValue bindings); delta-merged onto the newer 0.11 TCK (mainline
  failure-isolation / cleanup cases preserved, not overwritten)
- PaqsSchedulerTest: CustomExecutionBackend (default-backend behaviour unchanged)
- ROADMAP: locality NO_GO re-scoped as config-scoped (Community-only, stock scheduler
  with the reflective custom-scheduler override absent, no pullerMode=3; Enterprise
  io_uring M4/M5 never ran); seam is now the shared injection point for the io_uring
  locality re-test and the post-1.0 DST SimulationScheduler

Companion ADR (seam intent + config-scoped NO_GO + re-test regime) pending number
reservation. LocalityAwareExecutionBackend / benchmark harness intentionally not ported.
All PAQS tests green (refactor-neutral).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* docs(adr): ADR-051 — PAQS execution-s