@@ -3,19 +3,21 @@
 > **Pre-1.0 / TRL-3 statement of scope.** This document declares what the **open-core (Community)**
 > kernel supports today, what is **Enterprise-only** (out of open-core scope), and what is **deferred**
 > to a future version. It is a forward-looking product-scope statement, **not** a semver guarantee:
-> there are no external SPI consumers before 1.0, and "stable" here means "the contract we intend to
-> hold semver-binding from 1.0" (see the per-surface authority in [`stability-matrix.md`](./stability-matrix.md)).
+> no SPI consumer is under a support contract before 1.0, and "stable" here means "the contract we
+> intend to hold semver-binding from 1.0" (see the per-surface authority in
+> [`stability-matrix.md`](./stability-matrix.md), and the generated per-release compatibility record
+> in [`release/spi-api-history.md`](./release/spi-api-history.md)).
 
 ## Supported runtime baseline
 
 | Component        | Supported                                  | Notes |
 |:-----------------|:-------------------------------------------|:------|
-| **JDK**          | Java 26 (preview features enabled)         | `--enable-preview`; Loom VTs, Panama FFM, `ScopedValue`, `StructuredTaskScope`. Maven itself must run on JDK 26. |
+| **JDK**          | Java 25 LTS or newer                       | The distributed `0.11.0` artifact is preview-clean — **`--enable-preview` is not required** (ADR-066). Uses Loom VTs, Panama FFM, `ScopedValue`. Pass `--enable-native-access=ALL-UNNAMED` for the FFM transport/crypto paths. The separate `0.11.0-preview` artifact targets the newest JDK and does require the flag — see [guides/01](./guides/01-platform-and-dependencies.md). |
 | **Database**     | PostgreSQL 16                              | Persistence + Flow snapshot store + outbox; validated via Testcontainers `postgres:16`. |
 | **Event broker** | Kafka 3.6 wire (validated on CP 7.6.x)     | Optional — only when the Events subsystem uses the Kafka driver (`exeris-kernel-community-kafka`). |
 | **TLS**          | OpenSSL 3.0 – 4.x (multi-version)          | Community fd-owner TLS engine; 3.x floor retained for FIPS provider compatibility (ADR-008, OpenSSL-4 migration). |
-| **HTTP**         | HTTP/1.1, HTTP/2 (h2 + h2c)                | TLS 1.2 / 1.3 via OpenSSL; request/response only (server-push: see *Deferred* below). |
-| **Topology**     | Single-node Community                      | Multi-node + Enterprise overlay are a separate (Enterprise) concern — see [reference deployment](./operations/reference-deployment.md). |
+| **HTTP**         | HTTP/1.1, HTTP/2 (h2 + h2c)                | TLS 1.2 / 1.3 via OpenSSL; request/response plus SSE server-push since 0.10 (ADR-043). WebSocket is still out — see *Deferred* below. |
+| **Topology**     | Single-node Community                      | The validated baseline is one node — see [reference deployment](./operations/reference-deployment.md). Scaling out is not Enterprise-gated but it is not turnkey either: what the kernel does and does not carry for N instances is inventoried in [`subsystems/events.md`](./subsystems/events.md) → *Multi-node substrate inventory*. |
 
 ## SPI surface status
 
@@ -28,6 +30,8 @@ Mirrors [`stability-matrix.md`](./stability-matrix.md) — that document is the 
 | `diagnostics` | **stable** | 0.9.0 (ADR-033) |
 | `http` — `HttpServerEngine`/`HttpClientEngine`/`HttpExchange`/`HttpHandler`/`HttpProvider`, `HttpClientRequestEnricher` | **stable** | 0.5.0 / 0.8.0 |
 | `http` — `HttpRequestBodyEncoder`/`Decoder`, `HttpResponseBodyDecoder` (ADR-034) | **preview** | 0.8.0 |
+| `http` — `HttpStreamExchange`/`HttpStreamHandler`/`StreamEvent`, SSE server-push (ADR-043) | **preview** | 0.10.0 |
+| `security.identity` — `IdentityProvider`/`TokenValidator`/`VerifiedClaims` (ADR-040) | **preview** | 0.10.0 |
 | `events`, `graph`, `security`, `crypto` | **preview** | 0.5.0 |
 | `util` | _internal_ | — |
 
@@ -41,7 +45,8 @@ transport in Enterprise):
 - **Single-node only** — no built-in clustering/discovery; horizontal scale is the host application's concern.
 - **NIO transport carrier** — `java.nio` selector reactors, not `io_uring`; OpenSSL fd-owner TLS.
 - **Caffeine** is the only in-process cache; no pluggable `CacheProvider` yet.
-- **No server-initiated push yet** — HTTP is request/response; a live view polls. (Server push is the next SPI to land — see *Deferred*.)
+- **Server push is SSE-only** — one-directional `HttpStreamExchange` since 0.10 (ADR-043); no WebSocket, so a full-duplex client still polls or opens a second request.
+- **Events are single-node by default** — the in-heap bus does not cross the node boundary and the Outbox is durable *emission*, not cross-node delivery; that needs the Kafka driver. See [`subsystems/events.md`](./subsystems/events.md) → *Delivery Boundary*.
 - Best-effort performance contract (No Waste Compute on hot paths, but not the Enterprise zero-copy native tier).
 
 ## Enterprise-only (out of open-core scope)
@@ -57,9 +62,7 @@ These are deliberately **not** in the Community kernel and live behind the Enter
 
 | Capability | Target | Driver |
 |:-----------|:-------|:-------|
-| **HTTP server-push / streaming SPI (SSE-first)** | **v0.10 / v0.11** *(brought earlier than the originally-planned v0.12)* | RFC in review → ADR-043 (reserved) |
-| WebSocket (full duplex) | after SSE | follows the SSE primitive; separately justified |
-| `IdentityProvider` SPI + first driver | v0.10 | RFC-2026-06-08 (ACCEPTED) → ADR-040 (reserved) |
+| WebSocket (full duplex) | after SSE | follows the SSE primitive (shipped 0.10); separately justified, not milestone-pinned |
 | `BlobStorageProvider`, `JobScheduler` SPI | v0.11 | new-SPI roadmap |
 | `CacheProvider` SPI | RFC-stage | new-SPI roadmap |
 | OTLP metrics export + distributed tracing | ~v0.12 | ADR-031 (kernel-gated) — no tracing logic in the kernel today |
